--- a/action.yml
+++ b/action.yml
@@ -2,7 +2,7 @@ name: 'Dependabot Private Release Notify'
 description: 'Notify Dependabot of a new Python package release'
 inputs:
   github_token:
-    description: 'Github token to use for the dependabot connection, use: ${{secrets.GITHUB_TOKEN}}'
+    description: 'Github token to use for the dependabot connection'
     required: true
 runs:
   using: 'docker'
